--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  modal_bottom_sheet: ^2.1.2
   flutter_bloc: ^8.1.2
+
   flutter:
     sdk: flutter
 
