--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   modal_bottom_sheet: ^2.1.2
   flutter_bloc: ^8.1.2
 
@@ -40,6 +42,8 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  build_runner: ^2.3.3
+  hive_generator: ^2.0.0
   flutter_test:
     sdk: flutter
 
