--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.3.3
   hive_generator: ^2.0.0
+  modal_progress_hud_nsn: ^0.3.0
   flutter_test:
     sdk: flutter
 
