--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  intl: ^0.18.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   modal_bottom_sheet: ^2.1.2
